# terrain_nav_ws

./: .gitignore
docs/: nav_plan.md  导航方案.docx
src/dog_nav_interfaces/: CMakeLists.txt  package.xml
src/dog_nav_interfaces/msg/: DogMotion.msg  SafetyState.msg
src/dog_nav_step56/: package.xml  setup.cfg  setup.py
src/dog_nav_step56/config/: motion_adapter.yaml  safety_supervisor.yaml
src/dog_nav_step56/dog_nav_step56/: local_controller_node.py  motion_adapter_node.py  odom_imu_sim_node.py  safety_supervisor_node.py  simulated_input_node.py  state_machine.py  terrain_cost_scalar_bridge_node.py  test_trace_recorder_node.py
src/dog_nav_step56/launch/: closed_loop_demo.launch.py  step56.launch.py  step56_smac_integration.launch.py  step56_test.launch.py
src/dog_nav_step56/resource/: dog_nav_step56
src/terrain_analysis/: CMakeLists.txt  package.xml
src/terrain_analysis/src/: terrain_analyzer_node.cpp
src/terrain_costmap/: CMakeLists.txt  package.xml
src/terrain_costmap/src/: terrain_costmap_node.cpp
src/terrain_costmap_converter/: CMakeLists.txt  package.xml
src/terrain_costmap_converter/src/: terrain_costmap_to_occupancy_node.cpp
src/terrain_nav_bringup/: package.xml  setup.cfg  setup.py
src/terrain_nav_bringup/launch/: terrain_nav.launch.py
src/terrain_planner/: CMakeLists.txt  package.xml
src/terrain_planner/src/: terrain_planner_node.cpp
src/terrain_simulation/: CMakeLists.txt  package.xml
src/terrain_simulation/src/: terrain_map_publisher_node.cpp
src/terrain_smac_bringup/: package.xml  setup.py
src/terrain_smac_bringup/config/: smac_params.yaml
src/terrain_smac_bringup/launch/: terrain_smac.launch.py
src/terrain_smac_bringup/terrain_smac_bringup/: smac_test_client.py
