<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>terrain_nav_bringup</name>
  <version>0.0.0</version>
  <description>Launch configuration for terrain navigation system</description>
  <maintainer email="luym@todo.todo">luym</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>terrain_simulation</exec_depend>
  <exec_depend>terrain_analysis</exec_depend>
  <exec_depend>terrain_costmap</exec_depend>
  <exec_depend>terrain_planner</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
