<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>terrain_simulation</name>
  <version>0.0.0</version>
  <description>Terrain simulation package for publishing simulated elevation maps</description>
  <maintainer email="luym@todo.todo">luym</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>grid_map_msgs</depend>
  <depend>grid_map_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
